fix: spacings hero banner and sections paddings

--- a/src/App.scss
+++ b/src/App.scss
@@ -78,8 +78,10 @@ $spacing-scale: (
   11: 48px,
   12: 52px,
   13: 56px,
-  14: 64px,
-  15: 80px,
+  14: 60px,
+  15: 64px,
+  16: 80px,
+  17: 92px,
 );
 
 @function spacing($step) {
@@ -135,7 +137,7 @@ $gradient-yellow-pink: linear-gradient(
   }
 
   @include desktop-media-query {
-    padding: 0 spacing(15);
+    padding: 0 spacing(16);
   }
 }
 
@@ -377,7 +379,7 @@ body {
 
     @include desktop-media-query {
       background-size: 360px auto;
-      background-position: right spacing(9) top 50%;
+      background-position: right spacing(9) top spacing(14);
     }
   }
 
@@ -401,6 +403,11 @@ body {
       margin: unset;
       gap: spacing(4);
       padding-bottom: 0px;
+    }
+
+    @include desktop-media-query {
+      padding-top: spacing(17);
+      justify-content: flex-start;
     }
   }
 
@@ -483,30 +490,34 @@ body {
 .content-container {
   @include layout-container;
 
-  padding-bottom: spacing(11);
+  padding-top: spacing(12);
+  padding-bottom: spacing(12);
 
   @include tablet-media-query {
-    padding-bottom: spacing(12);
+    padding-top: spacing(13);
+    padding-bottom: spacing(13);
   }
 
   @include desktop-media-query {
-    padding-bottom: spacing(13);
+    padding-top: spacing(14);
+    padding-bottom: spacing(14);
   }
 }
 
 .offers-cards {
-  padding-top: spacing(6);
+  padding-top: spacing(7);
   display: grid;
   gap: spacing(7);
   grid-template-columns: 1fr;
 
   @include tablet-media-query {
-    padding-top: spacing(9);
     grid-template-columns: repeat(2, 1fr);
   }
 
   @include desktop-media-query {
     gap: spacing(9);
+    padding-top: spacing(9);
+
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
 
@@ -521,6 +532,10 @@ body {
       & > .card__subtitle {
         font-size: 26px;
       }
+
+      @include desktop-media-query {
+        padding: spacing(8);
+      }
     }
   }
 }
@@ -529,11 +544,14 @@ body {
   height: 350px;
   color: $color-primary;
   border-radius: $border-radius;
+  padding: spacing(7) spacing(6);
 
-  padding: spacing(6);
+  @include tablet-media-query {
+    padding: spacing(6);
+  }
 
   @include desktop-media-query {
-    padding: spacing(8);
+    padding: spacing(11) spacing(8);
   }
 
   &__content-container {
@@ -590,10 +608,16 @@ body {
 }
 
 .section-block {
-  padding-top: spacing(12);
+  &--journey {
+    padding-top: spacing(12);
 
-  @include tablet-media-query {
-    padding-top: spacing(13);
+    @include tablet-media-query {
+      padding-top: spacing(13);
+    }
+
+    @include desktop-media-query {
+      padding-top: spacing(14);
+    }
   }
 
   &__title {
@@ -638,6 +662,10 @@ body {
     list-style: none;
     padding-top: spacing(4);
     @extend %text-body-bold;
+
+    @include desktop-media-query {
+      padding-top: spacing(3);
+    }
   }
 
   &__extra-content {
